feat: ocr 파일 저장 기능 추가

--- a/requirements.txt
+++ b/requirements.txt
@@ -14,6 +14,7 @@ pytz==2025.2                  # 표준 시간대(tz) 지원 (datetime 관련)
 # 데이터 유효성 검사
 # -----------------------------
 pydantic==2.11.5              # 데이터 모델/검증용 라이브러리 (v2 기반)
+pydantic_settings==2.10.1     # BaseSettings 분리된 설정 관리 전용 패키지
 
 # -----------------------------
 # 파일 업로드 및 OCR
