chore: DockerFile 설정, paddleocr 패키지 설치

--- a/.docker/Dockerfile
+++ b/.docker/Dockerfile
@@ -2,6 +2,8 @@ FROM python:3.11-slim
 
 WORKDIR /app
 
+RUN pip install --upgrade pip setuptools wheel
+
 COPY ./app /app
 
 COPY requirements.txt ./requirements.txt
