--- a/.docker/Dockerfile
+++ b/.docker/Dockerfile
@@ -2,6 +2,11 @@ FROM python:3.11-slim
 
 WORKDIR /app
 
+RUN apt-get update && apt-get install -y \
+    libgl1 \
+    libglib2.0-0 \
+    && rm -rf /var/lib/apt/lists/*
+
 RUN pip install --upgrade pip setuptools wheel
 
 COPY ./app /app
