feat: pytest 패키지 설치, 프로젝트 루트 설정 추가

--- a/requirements.txt
+++ b/requirements.txt
@@ -48,3 +48,9 @@ passlib                       # Password hashing utility (supports multiple sche
 # JWT Token Handling
 # -----------------------------
 python-jose[cryptography]     # JWT creation and verification using cryptographic algorithms
+
+# -----------------------------
+# Testing
+# -----------------------------
+pytest                        # Python testing framework / test runner
+pytest-asyncio                # pytest plugin to test async functions (async def) in FastAPI
